crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_073_VRC3_Salamander_AC_v0_1_Hack.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-073-VRC3/Salamander AC v0.1 (Hack).nes
rom_sha256=fb56bae394c156d6ee712316ae1cbde21221dec9be0da080f16c2a383bb02cb8
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=9ffe77ec799aa178
checkpoint f900 fb_fnv1a64=5e50e8ff0b0d0ae4
checkpoint f1100 fb_fnv1a64=de2887a10b14943e
