crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_073_VRC3_Salamander_AC_v0_1_Hack_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-073-VRC3/Salamander AC v0.1 (Hack).zip
rom_sha256=ffda987416c7985769622ac6d2c3d79ca2eb532cee03b388a2fdd3fe1747b3e2
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=9ffe77ec799aa178
checkpoint f900 fb_fnv1a64=5e50e8ff0b0d0ae4
checkpoint f1100 fb_fnv1a64=de2887a10b14943e
