crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_073_VRC3_Salamander_J.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-073-VRC3/Salamander (J) [!].nes
rom_sha256=fce0e800062bb97fa6f583f6af2799771d5d5decf31aa336812ffb75d527169e
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=fcbb0554288776f1
checkpoint f900 fb_fnv1a64=fdc9d9fe17ac8d72
checkpoint f1100 fb_fnv1a64=cfa71912b1d4c4c0
