crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_073_VRC3_Salamander_J_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-073-VRC3/Salamander (J) [!].zip
rom_sha256=80540dca4c3c5ddd104b6c186b6a50be527660dd734e1e5bf2949b7251f54586
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=fcbb0554288776f1
checkpoint f900 fb_fnv1a64=fdc9d9fe17ac8d72
checkpoint f1100 fb_fnv1a64=cfa71912b1d4c4c0
