crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_075_VRC1_Exciting_Boxing_Japan.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-075-VRC1/Exciting Boxing (Japan).zip
rom_sha256=8544384a04c3f976c23cce62453d2963b131214cfc636942b4ec0722df8eb96e
frames=1141
fb_bytes=245760
cycles=33949781
audio_samples=836505
audio_fnv1a64=153581fa3061b946
checkpoint f900 fb_fnv1a64=5b53277238c2e5b1
checkpoint f1100 fb_fnv1a64=5b53277238c2e5b1
