crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_075_VRC1_Jajamaru_Ninpou_Chou_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-075-VRC1/Jajamaru Ninpou Chou (Japan).zip
rom_sha256=47bee8fe2d1824edb09ce714ceaa79eb855c10cf32bd1f262ecdecc8c0526b71
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=f18add13e925953d
checkpoint f900 fb_fnv1a64=0896a7427415486c
checkpoint f1100 fb_fnv1a64=0896a7427415486c
